--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
   </tr>
+  Add a suggestion
 </table>
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
